--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,7 +1,7 @@
 @use '../utils/vars' as vars;
 
 .benefits {
-  min-width: 320px;
+  min-width: 280px;
   margin-bottom: 50px;
   width: 100%;
   padding: 0 20px;
