--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   width: 100%;
   padding: 50px 20px;
-  min-width: 320px;
+  min-width: 280px;
   margin-top: 24px;
 }
 .contacts__title {
