--- a/src/sass/components/_guarantee.scss
+++ b/src/sass/components/_guarantee.scss
@@ -1,8 +1,8 @@
 @use '../utils/vars' as vars;
 
 .guarantee {
-  min-width: 320px;
-  width: 100vw;
+  min-width: 280px;
+  width: 100%;
   text-align: center;
   align-items: center;
   margin: 0 auto;
