--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,7 +1,7 @@
 @import '../utils/vars';
 
 .mobile-menu {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: fixed;
   top: 0;
@@ -26,7 +26,7 @@
     }
   }
   &__nav-box {
-    width: 100vw;
+    width: 100%;
   }
   &__nav-list {
     list-style: none;
@@ -57,7 +57,7 @@
     }
   }
   &__button-box {
-    width: 100vw;
+    width: 100%;
   }
   &__button {
     width: 260px;
