--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -2,7 +2,7 @@
 
 .problems {
   margin-bottom: 50px;
-  min-width: 320px;
+  min-width: 280px;
   width: 100%;
   padding: 50px 20px 0 20px;
   background: linear-gradient(
